Proof of concept dropdown

--- a/src/css/dropdown.css
+++ b/src/css/dropdown.css
@@ -7,26 +7,38 @@
 
 /* DropDown selector */
 .dropDownSelector {
-
+    cursor: pointer
 }
 
 /* DropDown list */
 .dropDownList {
-
+    font-family: sans-serif;
 }
 
 /* DropDown item */
 /* Normal and selected */
 .dropDownItem {
-    background-color: lightsalmon
+    background-color: lightsalmon;
+    cursor: pointer;
+    font-weight: normal;
 }
 
 .dropDownItemSelected {
     background-color: orange;
     color: white;
+    cursor: pointer;
     font-weight: bold;
 }
 
-.hidden {
-    display: none;
+/* dropdown animations */
+
+.showDropDown {
+    max-height: 500px;
+    transition: max-height .3s linear;
+}
+
+.hideDropDown {
+    max-height: 0;
+    transition: max-height .3s linear;
+    overflow: hidden;
 }
