Filter components refactoring

--- a/src/css/dropdown.css
+++ b/src/css/dropdown.css
@@ -3,6 +3,10 @@
 /* DropDown container component */
 .dropDown {
     background-color: lightgoldenrodyellow;
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    padding: 2px;
 }
 
 /* DropDown selector */
@@ -21,6 +25,7 @@
     background-color: lightsalmon;
     cursor: pointer;
     font-weight: normal;
+    padding: 2px;
 }
 
 .dropDownItemSelected {
@@ -28,17 +33,21 @@
     color: white;
     cursor: pointer;
     font-weight: bold;
+    padding: 2px;
 }
 
 /* dropdown animations */
 
 .showDropDown {
-    max-height: 500px;
-    transition: max-height .3s linear;
+    /* max-height: 500px; */
+    display: block;
+    position: absolute;
+    /* z-index: 1; */
+    /* transition: max-height .3s linear; */
 }
 
 .hideDropDown {
-    max-height: 0;
-    transition: max-height .3s linear;
-    overflow: hidden;
+    display: none;
+    /* max-height: 0; */
+    /* transition: max-height .3s linear; */
 }
