--- a/src/css/dropdown.css
+++ b/src/css/dropdown.css
@@ -42,7 +42,7 @@
     /* max-height: 500px; */
     display: block;
     position: absolute;
-    /* z-index: 1; */
+    z-index: 1;
     /* transition: max-height .3s linear; */
 }
 
