DropDown with toggle functionality, menu dishes with gluten icon

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -212,7 +212,10 @@ span + span:before {
   padding-right: 0.15em;
 }
 
-
 .dishDescription {
   font-size: .9em;
+}
+
+.dishIcons {
+  width: 10%;
 }
