Restaurant menu dish with icons, hide and show menu items base on selected page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -36,3 +36,4 @@ $filter-font: "Vollkorn";
 $dishes-font: "Vollkorn";
 $menu-category-color: $text-header-color;
 $menu-category-bg-color: $text-header-bg-color;
+$dish-icon-height: 5vh;
