--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -37,3 +37,7 @@ $dishes-font: "Vollkorn";
 $menu-category-color: $text-header-color;
 $menu-category-bg-color: $text-header-bg-color;
 $dish-icon-height: 5vh;
+
+/* animations */
+
+$slide-distance: -500px;
