Slide left animation working for Chrome

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -40,4 +40,5 @@ $dish-icon-height: 5vh;
 
 /* animations */
 
-$slide-distance: -500px;
+/* iPhone SE screen size = 640! */
+$slide-distance: -650px;
