--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,12 +9,31 @@ body {
 }
 
 .flexContainer {
-  display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
+.fullWidth {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 1%;
+}
+
+/* flex container wrapping subpages (Home, About, Hours etc) for handling animation vertical alignment */
+
+.pageWrapper {
+  min-width: 100%;
+}
+
+/* subpage within a higher order wrapping component */
+.subPage {
+  /* min-width: 100%; */
+}
+
+/* background images */
 .background0 {
   background-image: none;
 }
@@ -23,33 +42,8 @@ body {
   background-image: url(../images/background.jpg);
   background-size: cover;
   padding: 1% solid white;
-  min-height: 100%;
-}
-
-.fullWidth {
-  width: 100%
-}
-
-/* general class for sections of text in the app */
-.sectionElement {
-  display: flex;
-  flex-wrap: wrap;
-  flex-basis: 100%;
-  margin-top: 1%;
-}
-
-/* flex container wrapping subpages (Home, About, Hours etc) for handling animation vertical alignment */
-.pageWrapper {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  margin-top: 1%;
-}
-
-/* subpage within a higher order wrapping component */
-.subPage {
-  flex-basis: 100%;
-  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
 }
 
 /* paragraph styling */
