DatePicker.js layout and date objects handling

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -43,6 +43,7 @@ $dish-icon-height: 5vh;
 $selector-color: $static-text-color;
 $selector-bg-color: $clickable-bg-color;
 $selector-selected-bg-color: lightgreen;
+$selector-spacing: 1%;
 
 /* animations */
 
